@@ -55,6 +55,7 @@ Release 0.18.0 - Unreleased
                (Billy Pearson via Stack)
    HBASE-832   Problem with row keys beginnig with characters < than ',' and
                the region location cache
+   HBASE-864   Deadlock in regionserver
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
